feat: add favicon and meta description

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spearfishing Shaft Volume Comparison</title>
+    <meta
+      name="description"
+      content="Compare the weight of spearfishing shafts with different diameters and lengths to optimize your gear setup choices."
+    />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   </head>
   <body>
     <h1>Spearfishing Shaft Weigth Comparison</h1>
 
-    <h4>
-      <p>
-        This tool compares the volume of spearfishing shfts with different
-        diameters and lengths.
-        <i>* It assumes that each shaft's steel has the same density</i>
-      </p>
-    </h4>
+    <h2>
+      This tool compares the volume of spearfishing shfts with different
+      diameters and lengths.
+      <i>* It assumes that each shaft's steel has the same density</i>
+    </h2>
 
     <form id="shaft-form">
       <label for="default-diameter">Default Diameter (mm):</label>
