--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Compare the weight of spearfishing shafts with different diameters and lengths to optimize your gear setup choices."
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.min.css" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   </head>
   <body>
