feat: add credits, minor page restyling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <h2>
       This tool compares the volume of spearfishing shfts with different
       diameters and lengths.
-      <i>* It assumes that each shaft's steel has the same density</i>
     </h2>
 
     <form id="shaft-form">
@@ -49,6 +48,19 @@
       </thead>
       <tbody></tbody>
     </table>
+
+    <h3>
+      <i>* Assuming that each shaft's steel has the same density</i>
+    </h3>
+
+    <footer>
+      <p>
+        Made with 💙 by
+        <a href="https://bit.ly/arielspearfishingteam" target="_blank">
+          Ariel Spearfishing Team 🧜‍♀️
+        </a>
+      </p>
+    </footer>
 
     <script>
       function calculateVolume(diameter, length) {
