--- a/spearfishing.html
+++ b/spearfishing.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spearfishing Shafts</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://apis.google.com/js/platform.js"></script>
     <!-- Link to the same CSS file -->
   </head>
   <body>
@@ -82,6 +81,7 @@
         drive.
       </p>
       <iframe
+        loading="lazy"
         width="560"
         height="315"
         src="https://www.youtube.com/embed/GtR1sgNwKz8?si=8WtWsAQQTPR1BRM1"
@@ -99,12 +99,6 @@
           Ariel Spearfishing Team 🧜‍♀️
         </a>
       </p>
-      <div
-        class="g-ytsubscribe"
-        data-channelid="UCkU9486guTACXWFdlzc4FYA"
-        data-layout="full"
-        data-count="default"
-      ></div>
     </footer>
   </body>
 </html>
