feat: remove embedded video, performance improvements

--- a/spearfishing.html
+++ b/spearfishing.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spearfishing Shafts</title>
+    <meta
+      name="description"
+      content="This article explains the impact of spearfishing shafts on speargun range and provides practical tips for choosing the right shaft for your underwater adventures."
+    />
     <link rel="stylesheet" href="styles.css" />
     <!-- Link to the same CSS file -->
   </head>
@@ -80,17 +84,18 @@
         out the video below where I take the Mr. Carbon 2.0 by C4 for a test
         drive.
       </p>
-      <iframe
-        loading="lazy"
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/GtR1sgNwKz8?si=8WtWsAQQTPR1BRM1"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin"
-        allowfullscreen
-      ></iframe>
+      <div class="video-thumbnail">
+        <a
+          href="https://youtu.be/GtR1sgNwKz8?si=SkoNd2mhktW10Ws8"
+          target="_blank"
+        >
+          <img
+            src="spearfishing-mr-carbon-review-video.jpg"
+            alt="Test C4 Mr. Carbon 2.0 - Welcome to Greece"
+            class="thumbnail-image"
+          />
+        </a>
+      </div>
     </article>
     <footer>
       <p>
