--- a/spearfishing.html
+++ b/spearfishing.html
@@ -9,7 +9,7 @@
       content="This article explains the impact of spearfishing shafts on speargun range and provides practical tips for choosing the right shaft for your underwater adventures."
     />
     <link rel="stylesheet" href="styles.css" />
-    <!-- Link to the same CSS file -->
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   </head>
   <body>
     <nav>
